tempfile/derive_more/tests/compile_fail/as_mut/multiple_struct_attrs.rs
#[derive(derive_more::AsMut)]
#[as_mut(forward)]
#[as_mut(forward)]
struct Foo {
    bar: i32,
}

fn main() {}
